--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,18 +6,27 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 8px auto;
+  padding: 8px;
+}
+
+.card > h1, div {
+  padding: 8px
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
 }
 
 .content {
+  margin-top: 16px;
+  margin-bottom: 16px;
   background: #e3f4ff;
 }
 
 .button-container {
+  text-align: center;
   background: #e3f4ff;
 }
 
