finished flex exercises

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,7 +5,14 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
+
+ a {
+   text-decoration: none;
+   color: rgb(69, 69, 69);
+ }
 
 img {
   width: 600px;
@@ -16,6 +23,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -24,4 +32,37 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.content {
+  margin: auto auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header, .footer {
+  display: flex;
+}
+
+.header .left-links, .footer .left-links {
+  margin-right:  auto;
+  margin-left: -20px;
+}
+
+.header .right-links, .footer .right-links {
+  margin-left:  auto;
+  margin: 20px;
+}
+
+.footer {
+  margin-top: auto;
+  background-color: rgb(205, 205, 205);
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  gap: 15px;
 }
