--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,7 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
 }
 
 .profile-image {
@@ -27,6 +28,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 10px;
 }
 
 button {
@@ -45,4 +47,26 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+}
+
+.left, .right {
+  display: flex;
+  flex: 1 1 1;
+}
+
+.left {
+  margin-right:  auto;
+  align-items: center;
+}
+
+.right {
+  margin-left: auto;
+  align-items: center;
+  gap: 15px;
+}
+
+.profile-image {
+  margin-right: 10px;
 }
