--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -19,8 +19,19 @@ body {
   background: white;
   width: 480px;
   border-radius: 10px;
+  padding: 20px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
+
+.middle {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 
 .icon {
   color: royalblue;
@@ -33,6 +44,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -46,6 +58,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 button {
@@ -63,4 +76,10 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header {
+  font-size: large;
+  font-weight: bold;
+  justify-content: center;
 }
