--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,10 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 30% 50% 20%;
+  grid-template-rows: 8% 8% 70% 8%;
+  gap: 15px;
 }
 
 .container div {
@@ -21,18 +25,27 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column: 1 / 4;
+  grid-row: 1;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-column: 1;
+  grid-row: 2 / span 2;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-column: 2 / 4;
+  grid-row: 2;
+  
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 2 / span 2;
+  grid-row: 3;
 }
 
 .article p {
@@ -44,4 +57,7 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / span 3;
+  grid-row: 4;
+  /* margin-bottom: 4%; */
 }
